# Smart-Hire-VU-Summer-Internship-Project

./: .gitignore  Dockerfile  README.md  docker-compose.yml  phase-1-report.md  phase-2-report.md  phase-3-report.md  phase-4-report.md  phase-5-report.md
backend/: Dockerfile  config.py  main.py  pyproject.toml  requirements.txt
backend/api/middleware/: validation.py
backend/api/routes/: __init__.py  export.py  rank.py  results.py
backend/db/: database.py  models.py  schema.sql
backend/modules/: hybrid_scorer.py  ingestion.py  ner.py  preprocessing.py  ranking.py  sbert_scorer.py  tfidf_scorer.py
backend/tests/: test_api.py  test_ingestion.py  test_ner.py  test_pipeline.py  test_preprocessing.py  test_scoring.py
backend/tests/fixtures/: valid_resume.docx
docs/: sbert-model-decision.md
frontend/: App.jsx  Dockerfile  index.css  index.html  package-lock.json  package.json  tailwind.config.js
frontend/api/: client.js
frontend/components/: CandidateRow.jsx  ExportButton.jsx  FileUpload.jsx  JDInput.jsx  ResultsTable.jsx  WeightSliders.jsx
frontend/src/: App.css  App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: ExportButton.jsx  FileUpload.jsx  JDInput.jsx  PoolAnalytics.jsx  ResultsTable.jsx  WeightSliders.jsx
scripts/: generate_test_data.py  run_validation.py
test_data/: generate_test_files.py  jd.txt  scoring_validation.md
test_data/resumes/: jane_smith_semantic.docx
