[project]
name = "resume-ranking-backend"
version = "0.1.0"
description = "FastAPI backend for AI-Powered Resume Ranking System"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "python-multipart>=0.0.9",
    "pymupdf>=1.24.5",
    "python-docx>=1.1.2",
    "spacy>=3.7.5",
    "sentence-transformers>=3.0.1",
    "scikit-learn>=1.5.0",
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "pydantic>=2.7.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
